--- a/app/views/admin/current_site/_form.html.haml
+++ b/app/views/admin/current_site/_form.html.haml
@@ -1,5 +1,5 @@
 = form_for([:admin, @current_site], :html => {:class => "site_prop", :autocomplete => :off}) do |f|
-  %ol.form_fields
+  .form_fields
     = render :partial => "shared/error_messages",  
              :locals => { :target => @current_site}
     = render :partial => 'form_site_name', :locals => {:f => f}
