--- a/app/views/admin/current_site/_form_meta_tags.html.haml
+++ b/app/views/admin/current_site/_form_meta_tags.html.haml
@@ -1,17 +1,21 @@
-%li
-  = foldable_fieldset 'Meta Tags', :id => 'meta_tags_fieldset' do
-    %div.fields_wrap
-      %div.spinner_wrapper
-        = image_tag 'ajax-loader.gif', :class => 'spinner hidden'
-      %ol{ :id => 'site_meta_tags', :class => 'form_fields meta_tags' }
-        = f.fields_for :meta_tags do |builder|
-          %li{:id => meta_tag_id(builder.object), :class => 'inline meta_tag'}  
-            = builder.label :name
-            = builder.text_field :name
-            = builder.label :content
-            = builder.text_field :content
-            = manage_meta_tag @current_site, builder.object
-          %li
-            = builder.hidden_field :id
-        %li#add_meta_tag
-          = add_meta_tag 'Save current site first to add custom site wide meta tags', @current_site, [:new, :admin, @current_site, :meta_tag]
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#meta_tags_fieldset"}} 
+        Meta Tags
+    #meta_tags_fieldset.accordion-body.collapse.in
+      .accordion-inner
+        %div.spinner_wrapper
+          = image_tag 'ajax-loader.gif', :class => 'spinner hidden'
+        #site_meta_tags.form_fields.meta_tags
+          = f.fields_for :meta_tags do |builder|
+            %div{:id => meta_tag_id(builder.object), :class => 'inline form-inline control-group meta_tag'}  
+              = builder.label :name
+              = builder.text_field :name
+              = builder.label :content
+              = builder.text_field :content
+              = manage_meta_tag @current_site, builder.object
+            %div
+              = builder.hidden_field :id
+          #add_meta_tag
+            = add_meta_tag 'Save current site first to add custom site wide meta tags', @current_site, [:new, :admin, @current_site, :meta_tag]
