--- a/app/views/admin/current_site/_form_submit.html.haml
+++ b/app/views/admin/current_site/_form_submit.html.haml
@@ -1,3 +1,3 @@
-%li
-  = f.submit button_label, :class => "submit"
+#submit_fields.form-actions
+  = f.submit button_label, :class => "submit btn btn-success"
   = link_to "Cancel", [:edit, :admin, @current_site], :class => "cancel"
