--- a/app/views/admin/current_site/_new_form.html.haml
+++ b/app/views/admin/current_site/_new_form.html.haml
@@ -1,18 +1,22 @@
 = form_for([:admin, @site], :html => {:class => "site_prop", :autocomplete => :off}) do |f|
   %p.info Creating a new site will create a default admin user account with your current user profile and password. Your current account and the new account will not be linked so changes you make in one will not be applyed to the other.
   = render :partial => "shared/error_messages", :locals => { :target => @site }
-  = foldable_fieldset 'General' do
-    %ol.form_fields
-      %li
-        = f.label :name, "Name<abbr title='required' class='required'>*</abbr>".html_safe
-        = f.text_field :name, :placeholder => 'blog'
-      %li
-        = f.label :subdomain, "Subdomain<abbr title='required' class='required'>*</abbr>".html_safe
-        = f.text_field :subdomain, :placeholder => 'blog'
-      %li
-        = f.label :default_domain, "Domain<abbr title='required' class='required'>*</abbr>".html_safe
-        = f.text_field :default_domain, :placeholder => 'com'
-      %li
-        = f.submit button_label, :class => "submit"
-        = link_to "Cancel", [:admin, :sites], :class => "cancel" 
-   
+  .accordion
+    .accordion-group
+      .accordion-heading
+        %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#general_fields"}} 
+          General
+      #general_fields.accordion-body.collapse.in
+        .accordion-inner
+          = f.label :name, "Name<abbr title='required' class='required'>*</abbr>".html_safe
+          = f.text_field :name, :placeholder => 'blog'
+
+          = f.label :subdomain, "Subdomain<abbr title='required' class='required'>*</abbr>".html_safe
+          = f.text_field :subdomain, :placeholder => 'blog'
+
+          = f.label :default_domain, "Domain<abbr title='required' class='required'>*</abbr>".html_safe
+          = f.text_field :default_domain, :placeholder => 'com'
+          #submit_fields.form-actions
+            = f.submit button_label, :class => "submit btn btn-success"
+            = link_to "Cancel", [:admin, :sites], :class => "cancel" 
+     
