--- a/app/views/admin/users/_user.html.haml
+++ b/app/views/admin/users/_user.html.haml
@@ -3,7 +3,7 @@
   %td.username= user.username
   %td.role= user.role.capitalize
   - if current_user? user
-    %td.delete.btn.btn-mini.btn-danger= link_to "Delete", [:admin, user], :method => :delete, :data => { :confirm => "Are are you sure you want to delete your account?" }, :class => "btn btn-mini btn-danger"
+    %td.delete= link_to "Delete", [:admin, user], :method => :delete, :data => { :confirm => "Are are you sure you want to delete your account?" }, :class => "btn btn-mini btn-danger"
   - else
-    %td.delete.btn.btn-mini.btn-danger= link_to "Delete", [:admin, user], :method => :delete, :remote => :true, :data => { :confirm => "Are are you sure you want to delete the user #{user.full_name}?" }, :class => "btn btn-mini btn-danger"
+    %td.delete= link_to "Delete", [:admin, user], :method => :delete, :remote => :true, :data => { :confirm => "Are are you sure you want to delete the user #{user.full_name}?" }, :class => "btn btn-mini btn-danger"
 
