--- a/app/views/admin/page_parts/_page_part_nav.html.haml
+++ b/app/views/admin/page_parts/_page_part_nav.html.haml
@@ -1,2 +1,2 @@
-%li{:id => "#{@page_part.id}_nav", :class => 'tab selected'}
+%li{:id => "#{@page_part.id}_nav", :class => 'tab selected active'}
   = link_to @page_part.name, edit_admin_page_page_part_path(@page, @page_part.id, :view => @page_part.id), :remote => true 
