--- a/app/views/admin/pages/_editors.html.haml
+++ b/app/views/admin/pages/_editors.html.haml
@@ -1,8 +1,11 @@
-%li#page_editors_fields
-  = foldable_fieldset 'Page Editors' do
-    %div.fields_wrap
-      %ol.form_fields.group
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#page_editors_fields"}} 
+        Page Editors
+    #page_editors_fields.accordion-body.collapse
+      .accordion-inner
         - User.all_from_current_site(@current_site).asc(:username).each do |user|
-          %li.editor_field.inline
+          .editor_field.inline.form-inline.block-controls
             = check_box_tag "page[editor_ids][]", user.id, page.editor_ids.include?(user.id), :id => "editor_id_#{user.username}"
             = label_tag "editor_id_#{user.username}]", user.username.downcase
