--- a/app/views/admin/pages/_meta_tags.html.haml
+++ b/app/views/admin/pages/_meta_tags.html.haml
@@ -1,16 +1,20 @@
-%li#meta_tags_fields
-  = foldable_fieldset 'Page Meta Tags', :id => 'meta_tags_fieldset' do
-    %div.fields_wrap
-      %div.spinner_wrapper
-        = image_tag 'ajax-loader.gif', :class => 'spinner hidden'
-      %ol{ :id => 'page_meta_tags', :class => 'form_fields meta_tags'} 
-        = f.fields_for :meta_tags do |builder|
-          %li{:id => meta_tag_id(builder.object), :class => 'inline meta_tag'}  
-            = builder.label :name
-            = builder.text_field :name
-            = builder.label :content
-            = builder.text_field :content
-            = manage_meta_tag @page, builder.object
-          = builder_hidden_attribute(builder, @page)
-        %li#add_meta_tag
-          = add_meta_tag 'Save page first to add custom meta tags', @page, [:new, :admin, @page, :meta_tag]
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#meta_tags_fields"}} 
+        Page Meta Tags
+    #meta_tags_fields.accordion-body.collapse
+      #meta_tags_fieldset.accordion-inner
+        %div.spinner_wrapper
+          = image_tag 'ajax-loader.gif', :class => 'spinner hidden'
+        %div{ :id => 'page_meta_tags', :class => 'form_fields meta_tags'} 
+          = f.fields_for :meta_tags do |builder|
+            %div{:id => meta_tag_id(builder.object), :class => 'inline form-inline control-group meta_tag'}  
+              = builder.label :name
+              = builder.text_field :name
+              = builder.label :content
+              = builder.text_field :content
+              = manage_meta_tag @page, builder.object
+            = builder_hidden_attribute(builder, @page)
+          #add_meta_tag
+            = add_meta_tag 'Save page first to add custom meta tags', @page, [:new, :admin, @page, :meta_tag]
