--- a/app/views/admin/pages/_page_part_fields.html.haml
+++ b/app/views/admin/pages/_page_part_fields.html.haml
@@ -1,14 +1,14 @@
 = f.fields_for(:page_parts, @page.page_parts) do |builder|
-  %ol{:id => "page_part_#{builder.object.id}", :class => "form_fields #{show_page_part(builder.object)}" }
-    %li.page_part_name
+  %div{:id => "#{builder.object.id}", :class => "form_fields tab-pane #{show_page_part(builder.object)}" }
+    .page_part_name
       = builder.label :name, "Page Part Name<abbr title='required' class='required'>*</abbr>".html_safe
       = builder.text_field :name
-    %li.inline
+    .inline
       = builder.label :filter_name, "Filter<abbr title='required' class='required'>*</abbr>".html_safe
       = builder.collection_select :filter_name, Filter.all, :id, :name, {}, {:class => "page_part_filter"}
-    %li.content
+    .content
       = render :partial => 'shared/ace_editor', :locals => { :builder => builder }
-    %li.content_submit
+    .content_submit
       = builder.label :content, "Page Part Content<abbr title='required' class='required'>*</abbr>".html_safe 
       = builder.text_area :content, :class => "page_part_contents code"
     = builder_hidden_attribute(builder, @page)
