--- a/app/views/admin/pages/_page_parts.html.haml
+++ b/app/views/admin/pages/_page_parts.html.haml
@@ -1,11 +1,16 @@
-%li#page_parts_fields
-  = foldable_fieldset 'Page Parts', :class => 'page_parts' do
-    %div#page_parts_wrapper
-      = render :partial => 'page_parts_nav'
-      %div.spinner_wrapper
-        = image_tag 'ajax-loader.gif', :class => 'spinner hidden'
-      %div#page_parts_content_wrapper.fields_wrap
-        = render :partial => 'page_part_fields', :locals => { :f => f }
-- unless @selected_page_part.nil?
-  %li#selected_page_part.hidden
-    = hidden_field_tag :view, @selected_page_part.id
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#page_parts_fields"}} 
+        Page Parts
+    #page_parts_fields.accordion-body.collapse.in
+      .page_parts.accordion-inner
+        %div#page_parts_wrapper
+          = render :partial => 'page_parts_nav'
+          %div.spinner_wrapper
+            = image_tag 'ajax-loader.gif', :class => 'spinner hidden'
+          %div#page_parts_content_wrapper.fields_wrap.tab-content
+            = render :partial => 'page_part_fields', :locals => { :f => f }
+    - unless @selected_page_part.nil?
+      #selected_page_part.hidden
+        = hidden_field_tag :view, @selected_page_part.id
