Moved View page button, Corrected page custom fields title

--- a/app/views/admin/pages/_custom_fields.html.haml
+++ b/app/views/admin/pages/_custom_fields.html.haml
@@ -2,7 +2,7 @@
   .accordion-group
     .accordion-heading
       %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#custom_fields"}} 
-        General
+        Page Custom Fields
     #custom_fields.accordion-body.collapse
       #custom_fields_fieldset.accordion-inner
         %div.spinner_wrapper
