--- a/app/views/admin/pages/edit.html.haml
+++ b/app/views/admin/pages/edit.html.haml
@@ -1,10 +1,10 @@
 - header_content 'shared/header_wrapper', :object => @page do
   %div{:id => "delete_page", :class => "delete edit_page pull-right"}
+    = link_to 'View Page', @page.full_path, :target => "_blank", :class => 'view_page btn btn'
     = link_to "Delete Page", [:admin, @page], :method => :delete, :data => { :confirm => "Are you sure you want to delete the page #{@page.title}", 'data-title' => "#{@page.title}" }, :class => "action btn btn-danger delete #{child_pages}"
 
 - inner_content "shared/inner_wrapper"  do
   %div.breadcrumb
     = link_to "&laquo; Pages".html_safe, [:admin, :pages]
-    = link_to 'View Page', @page.full_path, :target => "_blank", :class => 'view_page'
 
   = render :partial => "form", :locals => { :button_label => "Update Page"}
