--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -683,7 +683,7 @@ div.add_some {
   left: 50%;
   padding: 20px;
   margin-top: 10px;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,.8);
   @include rounded_corners;
 }
 
