--- a/app/views/admin/meta_tags/_form.html.haml
+++ b/app/views/admin/meta_tags/_form.html.haml
@@ -1,14 +1,17 @@
 = form_for([:admin, @base_class, @meta_tag], :html => { :class => "site_prop", :autocomplete => :off }) do |f|
   = render :partial => "shared/error_messages", :locals => {:target => @meta_tag}
-  %ol.form_fields
-    = foldable_fieldset 'General' do
-      %div.fields_wrap
-        %li
+  .accordion
+    .accordion-group
+      .accordion-heading
+        %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#general_fields"}} 
+          General
+      #general_fields.accordion-body.collapse.in
+        .accordion-inner
           = f.label :name
           = f.text_field :name
-        %li
+
           = f.label :content
           = f.text_field :content
-        %li
-          = f.submit button_label, :class => "submit"
-          = link_to "cancel", [:edit, :admin, @base_class], :class => "cancel"
+  .form-actions        
+    = f.submit button_label, :class => "submit btn btn-sucess"
+    = link_to "cancel", [:edit, :admin, @base_class], :class => "cancel"
