--- a/app/views/admin/meta_tags/_meta_tag.html.haml
+++ b/app/views/admin/meta_tags/_meta_tag.html.haml
@@ -1,6 +1,6 @@
 = fields_for @base_class do |record|
   = record.fields_for(:meta_tags, @meta_tag) do |builder|
-    %li{:class => "inline meta_tag"}
+    .inline.meta_tag.form-inline
       = builder.label :name
       = builder.text_field :name
       = builder.label :content
